--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,6 +4,6 @@
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
             app:startDestination="@id/mainFragment">
 
-    <fragment android:id="@+id/mainFragment" android:name="pl.konarzewski.uboze.ui.main.MainFragment"
+    <fragment android:id="@+id/mainFragment" android:name="pl.konarzewski.uboze.ui.main.fragment.MainFragment"
               android:label="main_fragment" tools:layout="@layout/main_fragment"/>
 </navigation>
