--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground"
+        android:foreground="?attr/selectableItemBackground"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="false"
+        app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="@android:color/white">
 
     <ImageView
             android:id="@+id/image_place_holder"
@@ -12,4 +20,4 @@
             android:layout_marginTop="1dp"
             android:layout_marginBottom="-1dp" />
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
