--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -18,6 +18,19 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="1dp"
-            android:layout_marginBottom="-1dp" />
+            android:layout_marginBottom="-1dp"/>
+
+    <FrameLayout android:id="@+id/top_overlay" android:layout_width="match_parent" android:layout_height="match_parent">
+        <TextView
+                android:id="@+id/counter"
+                android:text="-100"
+                android:gravity="center"
+                android:textColor="#7CFC00"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="150sp"
+                android:textColorLink="#000000"
+        />
+    </FrameLayout>
 
 </androidx.cardview.widget.CardView>
