--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,4 +6,7 @@
 
     <fragment android:id="@+id/mainFragment" android:name="pl.konarzewski.uboze.ui.main.fragment.MainFragment"
               android:label="main_fragment" tools:layout="@layout/main_fragment"/>
+    <fragment android:id="@+id/copy" android:name="pl.konarzewski.uboze.ui.main.fragment.MemonicFragment" android:label="Copy">
+        <action android:id="@+id/action_copy_to_mainFragment4" app:destination="@id/mainFragment"/>
+    </fragment>
 </navigation>
